--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,10 +77,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
-  #   - images/a_dot_ham.jpeg
+    - assets/images/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
