--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   build_runner: ^2.10.4               # لتشغيل code generation
   json_serializable: ^6.11.1         # لتوليد ملفات .g.dart
   retrofit_generator: ^10.0.6        # لتوليد ملفات Retrofit _ApiService
+  freezed: ^3.1.0 
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0              # linting
